--- a/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -9,6 +9,7 @@
                 <outlet property="bottomSubmitButtonPin" destination="wqP-Ew-6an" id="XDa-HQ-vbT"/>
                 <outlet property="locationButton" destination="g4g-WA-Ur3" id="McY-vg-SNi"/>
                 <outlet property="nameTextField" destination="f2m-yn-Tiq" id="UiU-J3-DQ1"/>
+                <outlet property="view" destination="tJE-wm-sXb" id="7HR-t1-4CX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -253,29 +254,29 @@
                             <exclude reference="Tgk-Hs-bhZ"/>
                         </mask>
                         <mask key="constraints">
+                            <exclude reference="MXe-cc-L0g"/>
                             <exclude reference="IuI-wY-dut"/>
                             <exclude reference="vzJ-Hd-L4K"/>
-                            <exclude reference="3u2-G0-35f"/>
-                            <exclude reference="SwD-vn-tP1"/>
+                            <exclude reference="9HY-mt-x8p"/>
+                            <exclude reference="nXV-KQ-P6m"/>
+                            <exclude reference="qks-r5-jPO"/>
                             <exclude reference="JUt-6q-fgp"/>
                             <exclude reference="lVu-gv-EH5"/>
                             <exclude reference="ld7-Dk-Fgl"/>
+                            <exclude reference="7r1-lU-uc2"/>
+                            <exclude reference="bgH-Xb-rGv"/>
+                            <exclude reference="wqP-Ew-6an"/>
+                            <exclude reference="3u2-G0-35f"/>
+                            <exclude reference="SwD-vn-tP1"/>
+                            <exclude reference="CgP-2M-m8t"/>
+                            <exclude reference="DNf-cx-y7q"/>
+                            <exclude reference="S8f-Cs-oyn"/>
                             <exclude reference="dYF-ft-443"/>
                             <exclude reference="pZ8-xb-feR"/>
                             <exclude reference="uVA-hq-cfk"/>
                             <exclude reference="ycJ-Dq-45B"/>
-                            <exclude reference="CgP-2M-m8t"/>
-                            <exclude reference="DNf-cx-y7q"/>
-                            <exclude reference="S8f-Cs-oyn"/>
-                            <exclude reference="MXe-cc-L0g"/>
-                            <exclude reference="9HY-mt-x8p"/>
-                            <exclude reference="nXV-KQ-P6m"/>
-                            <exclude reference="qks-r5-jPO"/>
                             <exclude reference="BIp-Ne-mAT"/>
                             <exclude reference="Hrh-IQ-dF5"/>
-                            <exclude reference="7r1-lU-uc2"/>
-                            <exclude reference="bgH-Xb-rGv"/>
-                            <exclude reference="wqP-Ew-6an"/>
                         </mask>
                     </variation>
                     <variation key="widthClass=compact">
@@ -291,29 +292,29 @@
                             <include reference="Tgk-Hs-bhZ"/>
                         </mask>
                         <mask key="constraints">
+                            <include reference="MXe-cc-L0g"/>
                             <include reference="IuI-wY-dut"/>
                             <include reference="vzJ-Hd-L4K"/>
-                            <include reference="3u2-G0-35f"/>
-                            <include reference="SwD-vn-tP1"/>
+                            <include reference="9HY-mt-x8p"/>
+                            <include reference="nXV-KQ-P6m"/>
+                            <include reference="qks-r5-jPO"/>
                             <include reference="JUt-6q-fgp"/>
                             <include reference="lVu-gv-EH5"/>
                             <include reference="ld7-Dk-Fgl"/>
+                            <include reference="7r1-lU-uc2"/>
+                            <include reference="bgH-Xb-rGv"/>
+                            <include reference="wqP-Ew-6an"/>
+                            <include reference="3u2-G0-35f"/>
+                            <include reference="SwD-vn-tP1"/>
+                            <include reference="CgP-2M-m8t"/>
+                            <include reference="DNf-cx-y7q"/>
+                            <include reference="S8f-Cs-oyn"/>
                             <include reference="dYF-ft-443"/>
                             <include reference="pZ8-xb-feR"/>
                             <include reference="uVA-hq-cfk"/>
                             <include reference="ycJ-Dq-45B"/>
-                            <include reference="CgP-2M-m8t"/>
-                            <include reference="DNf-cx-y7q"/>
-                            <include reference="S8f-Cs-oyn"/>
-                            <include reference="MXe-cc-L0g"/>
-                            <include reference="9HY-mt-x8p"/>
-                            <include reference="nXV-KQ-P6m"/>
-                            <include reference="qks-r5-jPO"/>
                             <include reference="BIp-Ne-mAT"/>
                             <include reference="Hrh-IQ-dF5"/>
-                            <include reference="7r1-lU-uc2"/>
-                            <include reference="bgH-Xb-rGv"/>
-                            <include reference="wqP-Ew-6an"/>
                         </mask>
                     </variation>
                 </view>
@@ -332,11 +333,11 @@
                     <exclude reference="t1L-0N-iL3"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="TGd-Qc-Rn7"/>
-                    <exclude reference="eTa-5T-2DK"/>
-                    <exclude reference="Cno-it-eNa"/>
-                    <exclude reference="ZUA-H6-YSI"/>
                     <exclude reference="7E4-A4-rMZ"/>
+                    <exclude reference="Cno-it-eNa"/>
+                    <exclude reference="TGd-Qc-Rn7"/>
+                    <exclude reference="ZUA-H6-YSI"/>
+                    <exclude reference="eTa-5T-2DK"/>
                 </mask>
             </variation>
             <variation key="widthClass=compact">
@@ -344,11 +345,11 @@
                     <include reference="t1L-0N-iL3"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="TGd-Qc-Rn7"/>
-                    <include reference="eTa-5T-2DK"/>
-                    <exclude reference="Cno-it-eNa"/>
-                    <include reference="ZUA-H6-YSI"/>
                     <include reference="7E4-A4-rMZ"/>
+                    <exclude reference="Cno-it-eNa"/>
+                    <include reference="TGd-Qc-Rn7"/>
+                    <include reference="ZUA-H6-YSI"/>
+                    <include reference="eTa-5T-2DK"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="228" y="713"/>
